--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "register-service-worker": "^1.7.1",
     "v-mask": "^2.2.3",
     "vue": "^3.0.0",
+    "vue-js-popover": "^1.2.1",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
